removed unnecessary tag

--- a/businessCatalog.html
+++ b/businessCatalog.html
@@ -43,6 +43,7 @@
                                 <a class="dropdown-item" href="#">coming Soon!</a>
                             </div>
                 </li>
+                <a href="businessCatalog.html" class="btn btn-primary" type="submit">BuisnessCatalog</a>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 fluid" type="search" placeholder="search businesses" aria-label="Search">
@@ -54,12 +55,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="justify-content-center row">
             <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
-            <span class="text-center">
-                <span id="jumbotronSubText" class="jumbotronSubText align-middle"></span>
-                <a class="btn text-capitalize jumbotronSubText font-underline" href="#">
-                    <u>join us</u>
-                </a>
-            </span>
+            
         </div>
     </div>
 
