--- a/sign-in.html
+++ b/sign-in.html
@@ -37,7 +37,7 @@
                             <span class="we">We</span>Connect</span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                         <a businessID="" class="dropdown-item text-capitalize" href="sign-up.html">sign-up</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="sign-up.html">sign-up</a>
                         <a businessID="" class="dropdown-item text-capitalize" href="sign-in.html">sign-in</a>
                         <a businessID="" class="dropdown-item text-capitalize" href="Register-business.html">Register businesses</a>
                         <div class="dropdown-divider"></div>
@@ -45,6 +45,7 @@
 
                     </div>
                 </li>
+                <a href="businessCatalog.html" class="btn btn-primary" type="submit">BuisnessCatalog</a>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 fluid" type="search" placeholder="search businesses" aria-label="Search">
@@ -58,11 +59,7 @@
             <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
             <span class="text-center">
                 <span id="jumbotronSubText" class="jumbotronSubText align-middle"></span>
-                <a class="btn text-capitalize jumbotronSubText font-underline" href="">
-                    <a class="btn text-capitalize jumbotronSubText font-underline" href="">
-                        <a class="btn text-capitalize jumbotronSubText font-underline" href="">
-                            <u>join us</u>
-                        </a>
+
             </span>
         </div>
     </div>
@@ -203,9 +200,9 @@
                         <h3 class="card-title">
                             <b></b>Chuks Cosmetics</b>
                         </h3>
-                        <img class="card-img-top" src="./images/beauty/beauty-image.jpg" alt="Business Image">
-                        <img class="card-img-top" src="./images/beauty/beauty-image01.jpg" alt="Business Image">
-                        <img class="card-img-top" src="./images/beauty/beauty-image02.jpg" alt="Business Image">
+                        <img class="card-img-top" src="./images/beauty/Beauty-image.jpg" alt="Business Image">
+                        <img class="card-img-top" src="./images/beauty/Beauty-image01.jpg" alt="Business Image">
+                        <img class="card-img-top" src="./images/beauty/Beauty-image02.jpg" alt="Business Image">
                         <div class="card-body">
                             <p class="card-text">chuks Cosmetics offers makeup, skincare and beauty products made with high-performance naturals.
                                 <br /> Discover our cruelty-free and eco-friendly makeup today. chuks cosmetics.</p>
@@ -262,7 +259,7 @@
                             <a href="#" class="btn btn-primary">find out more</a>
                         </div>
 
-                    </div>s
+                    </div>
                 </aside>
             </div>
         </div>
