--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <!-- Navbar section -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <a id="navBarAppTitle" class="navbar-brand weconnect" href="#">
             <span class="we">We</span>Connect</a>
@@ -31,6 +31,7 @@
 
                     </a>
                 </li>
+                <!-- navbar link -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
@@ -43,21 +44,22 @@
                                 <a class="dropdown-item" href="#">coming Soon!</a>
                             </div>
                 </li>
+                <!--/.navbar link -->
                 <a href="businessCatalog.html" class="btn btn-primary" type="submit">BuisnessCatalog</a>
             </ul>
-           
+
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 fluid" type="search" placeholder="search businesses" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-         <!--   -->
+            <!--/.Navbar  -->
         </div>
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
         <div class="justify-content-center row">
             <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
-           
+
         </div>
     </div>
 
@@ -120,13 +122,15 @@
                     </a>
                 </div>
 
-                <!-- carousel -->
+                <!--/. carousel -->
             </main>
 
+            <!-- first-row business cards -->
             <aside class="col-md-2 order-md-1">
                 <h2 class="d-md-none h3 text-center p-1 mt-4 bg-dark colorWhite"></h2>
                 <b>recently added Businesses</b>
                 </h2>
+                <!-- first card -->
                 <div class="card text-center mb-2">
                     <h3 class="card-title">
                         <b></b>Chuks Cosmetics</b>
@@ -141,7 +145,8 @@
                     </div>
 
                 </div>
-
+                <!--/.first card -->
+                <!-- second card -->
                 <div class="card text-center mb-2">
                     <h3 class="card-title">
                         <b>Amaechi Automobile</b>
@@ -157,8 +162,12 @@
                     </div>
 
                 </div>
+                <!-- second card -->
             </aside>
+            <!--/. first-row business cards -->
 
+            <!-- second-row buisness cards -->
+            <!-- first card -->
             <aside class="col-md-2 order-md-12">
                 <div class="card text-center mb-2">
                     <h3 class="card-title">
@@ -175,8 +184,9 @@
                             solutions for a variety of uses. </p>
                         <a href="#" class="btn btn-primary">find out more</a>
                     </div>
-
                 </div>
+                <!--/. first card -->
+                <!--second card -->
                 <div class="card text-center mb-2">
                     <h5 class="card-title">flystar</h5>
                     <img class="card-img-top" src="./images/travel/travel.jpg" alt="Business Image">
@@ -195,7 +205,8 @@
             </aside>
         </div>
     </div>
-
+    <!--/. second card -->
+    <!--/.second-row business cards -->
 
     <!--Footer-->
     <footer class="pt-4 mt-4 bg-dark">
@@ -238,7 +249,7 @@
         <!--Copyright-->
         <div class="footer-copyright py-3 text-center">
             <div class="container-fluid">
-               copyright © WeConnect 2018: Developer
+                copyright © WeConnect 2018: Developer
                 <span id="copyright"> Amaechi </span>
 
             </div>
