--- a/businessCatalog.html
+++ b/businessCatalog.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <!-- Navbar section -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <a id="navBarAppTitle" class="navbar-brand weconnect" href="#">
             <span class="we">We</span>Connect</a>
@@ -31,6 +31,7 @@
 
                     </a>
                 </li>
+                <!-- navbar link -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
@@ -42,24 +43,23 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">coming Soon!</a>
                             </div>
+                        </span>
                 </li>
+                <!--/.navbar link -->
             </ul>
+            <!--  business search bar -->
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 fluid" type="search" placeholder="search businesses" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+            <!--/.business search bar -->
         </div>
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
         <div class="justify-content-center row">
             <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
-            <span class="text-center">
-                <span id="jumbotronSubText" class="jumbotronSubText align-middle"></span>
-                <a class="btn text-capitalize jumbotronSubText font-underline" href="#">
-                    <u>join us</u>
-                </a>
-            </span>
+
         </div>
     </div>
 
@@ -85,7 +85,9 @@
 
                             <div class="row col-sm-7">
 
-                                <p class="container-fluid text-align-center"><b>DETAILS:</b> </p>
+                                <p class="container-fluid text-align-center">
+                                    <b>DETAILS:</b>
+                                </p>
                                 <div class="col-sm-5 col-xs-1 tital ">location:</div>
                                 <div class="col-sm-7">Lagos</div>
                                 <div class="clearfix"></div>
@@ -109,6 +111,7 @@
                         </div>
                     </div>
                     <!--/.business details-->
+
                     <!--reviews-->
                     <form>
                         <div class="form-group">
@@ -125,13 +128,11 @@
                             </div>
                         </div>
 
-
-
                     </form>
                     <!--/.business details-->
                     <!--reviews-->
 
-                    <!-- carousel -->
+                    
             </main>
 
             <aside class="col-md-2 order-md-1 col-lg">
@@ -139,7 +140,7 @@
 
                 </h2>
                 <div class="card text-center mb-2">
-                    
+
                     <img class="card-img-top " src="./images/beauty/beauty-image.jpg" alt="Business Image">
 
                     <img class="card-img-top" src="./images/beauty/beauty-image02.jpg" alt="Business Image">
@@ -194,7 +195,7 @@
             <div class="footer-copyright py-3 text-center">
                 <div class="container-fluid">
                     copyright © WeConnect 2018: Developer
-                    <span id="copyright"> Amaechi </sp>
+                    <span id="copyright"> Amaechi </span>
 
                 </div>
             </div>
