--- a/sign-in.html
+++ b/sign-in.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <!-- Navbar section -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <a id="navBarAppTitle" class="navbar-brand weconnect" href="index.html">
             <span class="we">We</span>Connect</a>
@@ -30,6 +30,7 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
+                <!-- navbar link -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
@@ -45,6 +46,7 @@
 
                     </div>
                 </li>
+                <!--/. navbar link -->
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 fluid" type="search" placeholder="search businesses" aria-label="Search">
@@ -52,18 +54,14 @@
             </form>
         </div>
     </nav>
+    <!--/. navbar section -->
 
     <div class="jumbotron jumbotron-fluid">
         <div class="justify-content-center row">
             <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
             <span class="text-center">
                 <span id="jumbotronSubText" class="jumbotronSubText align-middle"></span>
-                <a class="btn text-capitalize jumbotronSubText font-underline" href="">
-                    <a class="btn text-capitalize jumbotronSubText font-underline" href="">
-                        <a class="btn text-capitalize jumbotronSubText font-underline" href="">
-                            <u>join us</u>
-                        </a>
-            </span>
+
         </div>
     </div>
 
@@ -129,9 +127,10 @@
                             <i class="fa fa-user-plus"></i>sign-in</button>
                     </div>
                 </div>
-                <!-- Material form login -->
+
         </div>
         </form>
+        <!-- default sign-in form -->
 
         <div class="container-fluid">
             <div class="row">
@@ -194,11 +193,12 @@
 
                     <!-- carousel -->
                 </main>
-
+                <!-- first-row business cards -->
                 <aside class="col-md-2 order-md-1">
                     <h2 class="d-md-none h3 text-center p-1 mt-4 bg-dark colorWhite">
                         recently added Businesses
                     </h2>
+                    <!-- first card -->
                     <div class="card text-center mb-2">
                         <h3 class="card-title">
                             <b></b>Chuks Cosmetics</b>
@@ -213,6 +213,8 @@
                         </div>
 
                     </div>
+                    <!--/.first card -->
+                    <!-- second card -->
                     <div class="card text-center mb-2">
                         <h3 class="card-title">
                             <b>Amaechi Automobile</b>
@@ -228,8 +230,12 @@
                         </div>
 
                     </div>
+                    <!-- second card -->
                 </aside>
+                <!--/. first-row business cards -->
 
+                <!-- second-row buisness cards -->
+                <!-- first card -->
                 <aside class="col-md-2 order-md-12">
                     <div class="card text-center mb-2">
                         <h3 class="card-title">
@@ -246,7 +252,8 @@
                                 solutions for a variety of uses. </p>
                             <a href="#" class="btn btn-primary">find out more</a>
                         </div>
-
+                        <!--/. first card -->
+                        <!--second card -->
                     </div>
                     <div class="card text-center mb-2">
                         <h5 class="card-title">flystar</h5>
@@ -267,6 +274,8 @@
             </div>
         </div>
 
+        <!--/. second card -->
+        <!--/.second-row business cards -->
 
         <!--Footer-->
         <footer class="pt-4 mt-4 bg-dark">
@@ -310,7 +319,7 @@
             <div class="footer-copyright py-3 text-center">
                 <div class="container-fluid">
                     copyright © WeConnect 2018: Developer
-                    <span id="copyright"> Amaechi </sp>
+                    <span id="copyright"> Amaechi </span>
 
                 </div>
             </div>
