--- a/sign-up.html
+++ b/sign-up.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <!-- Navbar section -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <a id="navBarAppTitle" class="navbar-brand weconnect" href="index.html">
             <span class="we">We</span>Connect</a>
@@ -30,6 +30,7 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
+                <!-- navbar link -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
@@ -45,6 +46,8 @@
 
                     </div>
                 </li>
+                <!--/.navbar link -->
+                <a href="businessCatalog.html" class="btn btn-primary" type="submit">BuisnessCatalog</a>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2 fluid" type="search" placeholder="search businesses" aria-label="Search">
@@ -53,13 +56,8 @@
         </div>
     </nav>
 
-    
-
 
     <!-- Default form sign-up -->
-
-
-    <!-- Material form sign-up -->
     <form>
         <div class="container-fluid">
             <form class="form-horizontal" role="form" action="/sign-up">
@@ -158,11 +156,7 @@
                             <i class="fa fa-user-plus"></i> sign-up</button>
                     </div>
                 </div>
-                <!-- Material form login -->
-
-                <!-- Default form login -->
-
-
+                <!--/. Default form login -->
                 <div class="container-fluid">
                     <div class="row">
                         <main class="container-fluid mb-3 col-md-8 order-md-4">
@@ -301,9 +295,7 @@
                         </aside>
                     </div>
                 </div>
-
-
-
+                <!-- carousel -->
                 <!--Footer-->
                 <footer class="pt-4 mt-4 bg-dark">
 
@@ -346,7 +338,7 @@
                     <div class="footer-copyright py-3 text-center">
                         <div class="container-fluid">
                             copyright © WeConnect 2018: Developer
-                            <span id="copyright"> Amaechi </sp>
+                            <span id="copyright"> Amaechi </span>
 
                         </div>
                     </div>
