--- a/index.html
+++ b/index.html
@@ -50,14 +50,17 @@
                 <input class="form-control mr-sm-2 fluid" type="search" placeholder="search businesses" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-            <!--   -->
+
         </div>
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
         <div class="justify-content-center row">
             <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
+            <span class="text-center">
+                <span id="jumbotronSubText" class="jumbotronSubText align-middle"></span>
 
+            </span>
         </div>
     </div>
 
